added a new component in the app to checkout the ones already done.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       <ul>
         <li> <a href="" routerLink="/">Home</a></li>
         <li><a href="" routerLink="/list">Breweries</a></li>
+        <li> <a href="" routerLink="/testout">TestOUT</a></li>
       </ul>
     </nav>
   </div>
@@ -12,3 +13,6 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<footer>
+  <a href=""></a>
+</footer>
